# stock-app

./: CREDITS  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: natives.cpp
app/src/main/java/net/alliedmods/quotes/: AlphaVantage.java  HttpCodeException.java  IQuoteService.java  IexCloud.java  Intrinio.java  QuoteFetcher.java  QuoteRequest.java  QuoteResult.java  SymbolSuggestion.java  TaskToken.java  WorldTradingData.java  YhFinance.java
app/src/main/java/net/alliedmods/stocks/: AddStockActivity.java  CachedQuote.java  EditListActivity.java  FastCsvParser.java  ICancelable.java  IThread.java  MainActivity.java  Settings.java  SettingsActivity.java  StockApplication.java  StockViewAdapter.java  SymbolSearchAdapter.java  SymbolSearchThread.java  UrlBuilder.java  (+1 more)
app/src/main/res/drawable/: divider_line.xml  ic_baseline_add_24px.xml  ic_baseline_list_24px.xml  ic_baseline_remove_circle_24px.xml  ic_baseline_reorder_24px.xml  ic_baseline_search_24px.xml  ic_baseline_settings_20px.xml  ic_remove.xml  pill_box.xml
app/src/main/res/layout/: activity_add_stock.xml  activity_edit_list.xml  activity_main.xml  divider_line.xml  stock_edit_row.xml  stock_row.xml  stock_suggestion.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-mdpi/: ic_bull.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml
app/src/main/res/xml/: alphavantage_preferences.xml  iexcloud_preferences.xml  intrinio_preferences.xml  root_preferences.xml  wtd_preferences.xml  yhfinance_preferences.xml
(+1 files in other folders)
